<resources>
    <string name="app_name">homeworkout</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Don\'t have an account/?<u>Sign Up</u></string>
    <string name="login1">Login</string>
    <string name="sign_up1">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <!--    <string name="password">Password</string>-->
    <!--    <string name="email">Email</string>-->
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <!--    <string name="email">Email</string>-->
    <!--    <string name="password">Password</string>-->
    <!--    <string name="login">LOGIN</string>-->
    <string name="don_t_have_an_account_sign_up">Don\'t have an account Sign Up</string>
    <string name="Track">Track</string>
    <string name="Plan">Plan</string>
    <string name="Profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>